src/validation/tests/snapshots/rusty__validation__tests__naming_validation_test__CHAR.snap
---
source: src/validation/tests/naming_validation_test.rs
expression: "& result"
---
error[E004]: CHAR can not be used as a name because it is a built-in datatype
  ┌─ <internal>:1:6
  │
1 │ TYPE CHAR : STRUCT x : DINT; END_STRUCT END_TYPE
  │      ^^^^ CHAR can not be used as a name because it is a built-in datatype

error[E004]: CHAR: Ambiguous datatype.
  ┌─ <internal>:1:6
  │
1 │ TYPE CHAR : STRUCT x : DINT; END_STRUCT END_TYPE
  │      ^^^^ CHAR: Ambiguous datatype.
